[gd_scene load_steps=6 format=2]

[ext_resource path="res://Battle.gd" type="Script" id=1]
[ext_resource path="res://SysthesisContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/Normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://hp_bar/Hp.tscn" type="PackedScene" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="Canvas" type="Node2D" parent="."]

[node name="Player" type="ColorRect" parent="Canvas"]
margin_left = 293.0
margin_top = 356.0
margin_right = 614.0
margin_bottom = 566.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="ColorRect" parent="Canvas"]
margin_left = 865.0
margin_top = 31.0
margin_right = 1231.0
margin_bottom = 284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="Panel" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -160.0
margin_right = 1280.0
rect_min_size = Vector2( 1280, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomPanel/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1268.0
margin_bottom = 148.0
custom_constants/separation = 6

[node name="SummaryPanel" type="PanelContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer"]
margin_right = 480.0
margin_bottom = 136.0
rect_min_size = Vector2( 480, 0 )

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SummaryPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 129.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SummaryPanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 456.0
margin_bottom = 112.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SummaryPanel/MarginContainer/VBoxContainer"]
margin_right = 446.0
margin_bottom = 17.0
text = "Buffer"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SummaryPanel/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 446.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionPanel" type="PanelContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 1256.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/ActionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 763.0
margin_bottom = 129.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/ActionPanel/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 744.0
margin_bottom = 110.0
custom_constants/separation = 12
alignment = 1

[node name="UseSkill" type="Button" parent="UI/BottomPanel/MarginContainer/HBoxContainer/ActionPanel/MarginContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 732.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 32 )
text = "使用技能"

[node name="GenerateSkill" type="Button" parent="UI/BottomPanel/MarginContainer/HBoxContainer/ActionPanel/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 732.0
margin_bottom = 87.0
rect_min_size = Vector2( 0, 32 )
text = "合成技能"

[node name="SkillPanel" type="PanelContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer"]
visible = false
margin_left = 486.0
margin_right = 1236.0
margin_bottom = 136.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SkillPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 743.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 52
custom_constants/margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SkillPanel/MarginContainer"]
margin_left = 52.0
margin_top = 12.0
margin_right = 724.0
margin_bottom = 110.0
custom_constants/vseparation = 12
custom_constants/hseparation = 32
columns = 4

[node name="Back" type="Button" parent="UI/BottomPanel/MarginContainer/HBoxContainer/SkillPanel"]
margin_left = 7.0
margin_top = 36.0
margin_right = 39.0
margin_bottom = 100.0
rect_min_size = Vector2( 32, 64 )
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Dialogue" type="PanelContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer"]
visible = false
margin_left = 486.0
margin_right = 1256.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomPanel/MarginContainer/HBoxContainer/Dialogue"]
margin_left = 7.0
margin_top = 7.0
margin_right = 763.0
margin_bottom = 129.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Content" type="RichTextLabel" parent="UI/BottomPanel/MarginContainer/HBoxContainer/Dialogue/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 736.0
margin_bottom = 102.0
bbcode_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="UI"]
margin_top = 462.0
margin_right = 320.0
margin_bottom = 562.0
rect_min_size = Vector2( 320, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 313.0
margin_bottom = 93.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 294.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="UI/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 282.0
margin_bottom = 17.0
text = "金"

[node name="Hp" parent="UI/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 38.0
margin_right = 282.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="Mask" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.509804, 0.509804, 0.509804, 1 )

[node name="Systhesis" type="CanvasLayer" parent="."]

[node name="SysthesisContainer" parent="Systhesis" instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="UI/BottomPanel/MarginContainer/HBoxContainer/ActionPanel/MarginContainer/VBoxContainer/UseSkill" to="." method="_on_UseSkill_pressed"]
[connection signal="pressed" from="UI/BottomPanel/MarginContainer/HBoxContainer/ActionPanel/MarginContainer/VBoxContainer/GenerateSkill" to="." method="_on_GenerateSkill_pressed"]
[connection signal="pressed" from="UI/BottomPanel/MarginContainer/HBoxContainer/SkillPanel/Back" to="." method="_on_SkillPanelBack_pressed"]
[connection signal="generate_finished" from="Systhesis/SysthesisContainer" to="." method="_on_SysthesisContainer_generate_finished"]
[connection signal="visibility_changed" from="Systhesis/SysthesisContainer" to="Systhesis/SysthesisContainer" method="_on_SysthesisContainer_visibility_changed"]
[connection signal="pressed" from="Systhesis/SysthesisContainer/BottomPanel/Back" to="." method="_on_SysthesisBack_pressed"]

[editable path="Systhesis/SysthesisContainer"]
